# ods-salary-monitor

./: LICENSE  README.md  pyproject.toml
notebooks/: 2.0-churnikov-september-2020.ipynb  monitor.ipynb
