[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Nikita Churikov <nikita@chur.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.1.2"
numpy = "^1.19.2"
matplotlib = "^3.3.2"
tqdm = "^4.49.0"

[tool.poetry.dev-dependencies]
isort = "^5.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
